front-end/src/Home.css
#welcome {
  margin: 10px auto;
}

.preview {
  margin: 20px 30px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.action {
  height: 20px;
}

.info {
  padding: 0;
  /* margin-left: 70% !important; */
  margin: auto;
}

.content {
  padding-top: 1.5em !important;
}

.LastMessage {
  height: 2em;
  text-overflow: ellipsis;
  overflow: hidden !important;
}

